# Kursovaya_6

./: .env.sample  dump.rdb  manage.py  pyproject.toml
blog/: services.py
config/: settings.py  urls.py
mailing/: services.py
mailing/management/commands/: start_mailing.py
mailing/migrations/: 0001_initial.py
users/management/commands/: csu.py
