[tool.poetry]
name = "kursovaya-6"
version = "0.1.0"
description = ""
authors = ["Khalilov Rustem"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
django = "^4.2.2"
python-dotenv = "^1.0.1"
psycopg = "^3.2.1"
django-apscheduler = "^0.6.2"
pillow = "^10.4.0"
redis = "^5.0.7"
pytils = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
